# taidl-artifact-micro25

./: .flake8  .gitignore  .pylintrc  README.md
accelerators/AMX/: TAIDL_AMX.py
accelerators/AMX/tests/: kernels.py  main.py
accelerators/TPUv1/: TAIDL_TPUv1.py
accelerators/amx/: TAIDL_amx.py
accelerators/amx/tests/: kernels.py  main.py
accelerators/gemmini/: TAIDL_gemmini.py
artifact-baseline/: Dockerfile  build.sh  full.sh  requirements.yml
artifact-baseline/amx/: Makefile  cnn_inference_amx.c  cnn_inference_mix.c  mem_format_prop_avx.c  oneDNN_eval.py  oneDNN_stats.py  rnn_inference_amx.c  sde_eval.py  setup.h  sgemm_avx.c
artifact-baseline/gemmini/: build_gemmini_tests.sh  exo.py  exo_gen.py  gemmini_eval.py  ibert.py  run_gemmini_test.sh  setup_spike.sh  tiled_matmul.py
artifact-taidl/: Dockerfile.amd64  Dockerfile.arm64  build.sh  run-tests.sh
artifact-taidl/xla-debug/: CMakeLists.txt  build.sh  print_handler_main.cc  test.sh  test_hlo.py
idl/: accelerator.py  decorator.txt  def-conversion.py  template.py  templates.txt  utils.py
plots/: amx_plots.py  figure-16-gemmini-tiled-matmul.py  figure-17-amx-oneDNN.py  figure-18-gemmini-exo.py  gemmini_exo_plots.py  gemmini_matmul_plots.py  reference_plots.sh  saved_plots.sh
plots/paper_data/: amx-oneDNN.csv  gemmini-exo.csv  gemmini-ibert.csv  gemmini-tiled-matmul.csv  oneDNN-stats.csv
plots/saved/: sde-oneDNN.csv  spike-gemmini-tiled-matmul.csv  taidl-gemmini-exo.csv  taidl-gemmini-tiled-matmul.csv  taidl-oneDNN.csv
scripts/: clean.sh  full.sh  kick-tires.sh  launch.sh  lite.sh  setup.sh
(+118 files in other folders)
